[tool.poetry]
name = "ec2startstop"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Daniel Vidal de la Rubia <dvrubia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
